--- a/frontend/src/pages/Home.css
+++ b/frontend/src/pages/Home.css
@@ -56,6 +56,7 @@
 }
 
 .get-started-button:hover {
+    transition: all 0.3s ease-in-out;
     background-color: #d68249;
     color: white;
     font-weight: 700;
@@ -65,7 +66,7 @@
 @media (max-width: 768px) {
     .home-container {
         margin-top: 3rem;
-        padding: 0;
+        padding: 0 1rem;
         margin-bottom: 2rem;
     }
     .hero {
